[package]
name = "test_bech32"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.8.0"
tiny-hderive = "0.3.0"
tiny-bip39 = "0.8.0"
ethsign = "0.8.0"
failure = ""
bitcoin = { version = "=0.26", features = ["use-serde"] }
hdpath = { version = "0.6.0", features = ["with-bitcoin"] }
ripemd160 = "0.9.1"
sha2 = "0.9.3"
