[package]
name = "test_bincode"
version = "0.1.0"
authors = ["jongwhan lee <jonghwan@crypto.com>"]
edition = "2018"


[features]
default = ["serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode="1.2"
serde_json="1.0.50"
serde = { version = "1.0.105", features = ["derive"], optional = true }