[package]
name = "fruit"
version = "0.1.0"
authors = ["jongwhan lee <jonghwan@gmail.com>"]
edition = "2018"

[lib]
name = "fruit"
crate-type =["staticlib", "cdylib"]


[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.48"
hex="0.4.2"
libc = "0.2.67"

[build-dependencies]
cbindgen = "0.13.1"

