[package]
name = "test_hdwallet"
version = "0.1.0"
authors = ["Jongwhan Lee <jonghwan@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-hderive = "0.2.1"
hex = "0.3.2"
ethsign= "0.6.1"
tiny-bip39 = "0.6"
