[package]
name = "test_jsclient"
version = "0.1.0"
authors = ["Jongwhan Lee <jonghwan@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc="0.11.0"
jsonrpc-core=""
websocket="0.23.0"
futures="0.1.28"
tokio="0.1.22"
jsonrpc-client-transports = "13.0.1"
serde_json=""
