[package]
name = "test_jsonrpc"
version = "0.1.0"
authors = ["jongwhan lee <jonghwan@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server="14.0.6"
jsonrpc-core="14.0.5"
jsonrpc-derive=""
log ="0.4.8"
jsonrpc-core-client = "14.0"
serde_json="1.0.48"
serde="1.0.105"