[package]
name = "test_jsonrpcclient"
version = "0.1.0"
authors = ["jongwhan lee <jonghwan@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc="0.11.0"
serde="1.0.105"
serde_json="1.0.50"
serde_derive=""
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core=""