[package]
name = "test_merkletrie"
version = "0.1.0"
authors = ["Jongwhan Lee <jonghwan@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde"]



[dependencies]
bytes = { version = "0.4.12", features = ["serde"] }
log = "0.4.6"
env_logger = "0.6.2"
serde_json=""
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive="1.0.98" 
bincode= "1.1.4"
hex="0.4.0"
rocksdb= "0.12.3"
blake2="0.8.0"

  