[package]
name = "test_merkletrie_patricia"
version = "0.1.0"
authors = ["Jongwhan Lee <leejw51@gmail.com>"]
edition = "2018"

[features]
default = ["serde"]



[dependencies]
env_logger= "0.7.0"
bytes = { version = "0.4.12", features = ["serde"] }
log = "0.4.6"
serde_json=""
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive="1.0.98" 
bincode= "1.1.4"
hex="0.4.0"
rocksdb= "0.12.3"
blake2="0.8.0"


