[package]
name = "test_mongo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.1"
failure ="0.1.8"
serde= "1.0.130"
serde_json="1.0.68"
bincode="1.3.3"
tokio={version="1.12.0", features=["full"]}
futures = "0.3"