[package]
name = "test_serialization"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version="1.0.130",features=["derive"]}
serde_json = "1.0.68"
failure= "0.1.8"
hex="0.4.3"
chrono = "0.4.19"