[package]
name = "test_websocket"
version = "0.1.0"
authors = ["Jongwhan Lee <jonghwan@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.23.0"
futures = "0.1.28"
tokio = "0.1.22"
serde_json = "1.0.40"
hex="0.3.2"
