[package]
name = "simple_trie"
version = "0.1.0"
authors = ["jongwhan lee <leejw51@gmail.com>"]
edition = "2018"

[features]
default = ["serde"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex= "0.4.0"
serde_json=""
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive="1.0.98" 
bincode= "1.1.4"
failure="0.1.6"
blake2="0.8.1"
rocksdb="0.13.0"
log="0.4.8"
starling="3.1.2"
bitvec = {version="0.17.2", features=["serde"]}